samples/_failures_safe/1761789595_fa8f90_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_265c31bd.c: In function ‘main’:
./samples/SAFE/__tmp_265c31bd.c:147:5: error: expected expression at end of input
  147 |     display_statistics(entries,
      |     ^~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_265c31bd.c:147:5: error: expected declaration or statement at end of input
